--- a/.gitignore
+++ b/.gitignore
@@ -332,6 +332,7 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder
 .mfractor/
+.vscode/
 
 # Local History for Visual Studio
 .localhistory/
